Add foods conceptions (#13) #minor
