# docs/swagger.json
@@ -43,6 +43,33 @@
                 ],
                 "responses": {}
             }
+        },
+        "/api/foods": {
+            "post": {
+                "description": "Creates a new food which can be used within recipes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "food"
+                ],
+                "summary": "Create a new food",
+                "parameters": [
+                    {
+                        "description": "Create a new food",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/food.createFoodPayload"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
@@ -56,6 +83,29 @@
                     "type": "string"
                 },
                 "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "food.createFoodPayload": {
+            "type": "object",
+            "properties": {
+                "family": {
+                    "type": "string"
+                },
+                "genus": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "order": {
+                    "type": "string"
+                },
+                "scientific_name": {
+                    "type": "string"
+                },
+                "specie": {
                     "type": "string"
                 }
             }
